--- a/register.html
+++ b/register.html
@@ -172,15 +172,17 @@ jQuery(function(jquery) {
  </script>
  <script type="text/javascript">
   function getImage() {
-            // Retrieve image file location from specified source
-            navigator.camera.getPicture(uploadPhoto, function(message) {
+	  
+	  alert("hello");
+            
+           /* navigator.camera.getPicture(uploadPhoto, function(message) {
 			alert('get picture failed');
 		},{
 			quality: 50, 
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
-            );
+            );*/
  
         }
  
