--- a/register.html
+++ b/register.html
@@ -205,10 +205,12 @@ jQuery(function(jquery) {
         }
  
         function win(r) {
-            console.log("Code = " + r.responseCode);
+            /*console.log("Code = " + r.responseCode);
             console.log("Response = " + r.response);
-            console.log("Sent = " + r.bytesSent);
-            alert(r.response);
+            console.log("Sent = " + r.bytesSent);*/
+			var resturn_data = jQuery.parseJSON(r.response);
+			
+            alert(resturn_data);
         }
  
         function fail(error) {
