--- a/register.html
+++ b/register.html
@@ -203,7 +203,7 @@ jQuery(function(jquery) {
             params1.value1 = "test";
             params1.value2 = "param";
  
-            options1.params = params;
+            options1.params1 = params1;
             options1.chunkedMode = false;
  
             var ft1 = new FileTransfer();
