--- a/register.html
+++ b/register.html
@@ -398,8 +398,8 @@ function accountRegister(){
 				 
 				if(data['success'])
 				{
-					localStorage.setItem("customer_log_id", data['success']['customer_id']);
-					window.location = './index.html';
+					//localStorage.setItem("customer_log_id", data['success']['customer_id']);
+					window.location = './thank-you.html';
 				}
 			}
    });
