--- a/login.html
+++ b/login.html
@@ -4,10 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <title>CastelLove</title>
-
-<!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/demo.css" rel="stylesheet">
 <link href="css/menu.css" rel="stylesheet">
@@ -22,8 +19,11 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-	
-
+<script type="text/javascript">
+if(localStorage.getItem("customer_log_id") != null) {
+  window.location = './index.html';
+}
+</script>
 </head>
 <body>
 <div id="o-wrapper" class="o-wrapper innerpage">
@@ -36,6 +36,7 @@
 <div class="l-box"><input type="password" name="login_password" id="login_password" placeholder="SENHA">
 </div>
 <div class="l-box btn-enter"><button id="acctoun_login" onClick="return accountLogin();">ENTRAR</button></div>
+<div class="forgot-link"><a href="forgot_password.html">Forgot Password?</a></div>
 </div>
 </div>
     </div>
@@ -60,12 +61,12 @@ function accountLogin(){
 				 {
 					if(data['error']['login_email'])
 				 	{
-						jQuery("#login_email").parents('div').addClass('error');
+						jQuery("#login_email").parent('div').addClass('error');
 					}
 					
 					if(data['error']['login_password'])
 				 	{
-						jQuery("#login_password").parents('div').addClass('error');
+						jQuery("#login_password").parent('div').addClass('error');
 					}
 					
 					if(data['error']['invalid'])
@@ -77,6 +78,7 @@ function accountLogin(){
 				if(data['success'])
 				{
 					localStorage.setItem("customer_log_id", data['success']['login_id']);
+					localStorage.setItem("customer_sex", data['success']['sex']);
 					window.location = './index.html';
 				}
 			}
