--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@ if(localStorage.getItem("customer_log_id") != null) {
 <div class="l-box"><input type="password" name="login_password" id="login_password" placeholder="SENHA">
 </div>
 <div class="l-box btn-enter"><button id="acctoun_login" onClick="return accountLogin();">ENTRAR</button></div>
-<div class="forgot-link"><a href="forgot_password.html">Forgot Password?</a></div>
+<div class="forgot-link"><a href="forgot_password.html">Esqueceu a senha?</a></div>
 </div>
 </div>
     </div>
