--- a/update_password.html
+++ b/update_password.html
@@ -87,7 +87,7 @@ function updatePassword(){
 				 
 				if(data['success'])
 				{					
-					alert(data['success']);
+					window.location = './edit-profile.html';
 				}
 			}
    });
