--- a/update_password.html
+++ b/update_password.html
@@ -37,7 +37,7 @@ if(localStorage.getItem("customer_log_id") === null) {
 
 <div class="loginbox lognewbox">
 <div class="log-top-img"><img src="images/login-logo.png"/></div>
-<div class="l-box crt-hd-acct"><div class="createacct"><a href="#">Atualizar Senha de Acesso</a></div></div>
+<div class="l-box crt-hd-acct"><div class="createacct"><a href="javascript:void(0);">Atualizar Senha de Acesso</a></div></div>
 <div class="l-box"><input type="password" name="new_password" autocomplete="off" tabindex="1" id="new_password" placeholder="NOVA SENHA">
 <input type="hidden" name="customer_id" id="customer_id">
 </div>
@@ -55,7 +55,7 @@ if(localStorage.getItem("customer_log_id") != null){
 }
 
 function updatePassword(){
-	var url = siteurl + '?route=account/forgotten';
+	var url = siteurl + '?route=account/password';
 	jQuery.ajax({
 			 type: 'POST',
 			 url: url,
@@ -68,7 +68,7 @@ function updatePassword(){
 				 $("#error_p").remove();
 				 if(data['error'])
 				 {
-					if(data['error']['name'])
+					if(data['error']['new_password'])
 				 	{
 						jQuery("#new_password").parent('div').addClass('error');
 					}					
