--- a/register.html
+++ b/register.html
@@ -57,10 +57,10 @@ jQuery(function(jquery) {
           <label>Gender:</label>
           <div class="rdio">
             <input type="radio" name="customer_sex" checked value="1">
-            Male </div>
+            Masculino </div>
           <div class="rdio">
             <input type="radio" name="customer_sex" value="2">
-            Female</div>
+            Fêmea</div>
         </div>
         <div class="l-box">
           <label>Cidade:</label>
@@ -106,12 +106,12 @@ jQuery(function(jquery) {
           <input type="text" name="customer_church" maxlength="50" id="customer_church" placeholder="Igreja Universal da Graça de Deus">
         </div>
         <div class="l-box pwdm">
-          <label>Password:</label>
-          <input type="password" name="customer_password" maxlength="12" id="customer_password" placeholder="Password">
+          <label>Senha:</label>
+          <input type="password" name="customer_password" maxlength="12" id="customer_password" placeholder="Senha">
         </div>
         <div class="l-box confm">
-          <label>Confirm Password:</label>
-          <input type="password" name="customer_con_password" maxlength="12" id="customer_con_password" placeholder="Password">
+          <label>Confirme a Senha:</label>
+          <input type="password" name="customer_con_password" maxlength="12" id="customer_con_password" placeholder="Confirme a Senha">
         </div>
         <div class="uploadfilemain">
           <div class="custom-file-upload"> <img src="images/uploadimg.png" id="image_sr_1" onclick="getImage1();"/>          
