--- a/register.html
+++ b/register.html
@@ -38,11 +38,11 @@ jQuery(function(jquery) {
       <div class="loginbox">
         <div class="l-box">
           <label>Nome:</label>
-          <input type="text" name="customer_name" maxlength="50" id="customer_name" placeholder="Digite o nome completo">
+          <input type="text" name="customer_name" maxlength="50" id="customer_name" placeholder="Insira o nome">
         </div>
         <div class="l-box">
           <label>E-mail:</label>
-          <input type="text" name="customer_email" maxlength="60" id="customer_email" placeholder="Digite o endereço de e-mail">
+          <input type="text" name="customer_email" maxlength="60" id="customer_email" placeholder="Endereço de e-mail">
         </div>
         <div class="l-box">
           <label>Idade:</label>
@@ -51,7 +51,7 @@ jQuery(function(jquery) {
         </div>
 		   <div class="l-box wtsnew">
           <label>WhatsApp:</label>
-         <input class="wtext" type="text" maxlength="12" name="customer_whats_no" id="customer_whats_no" placeholder="Digite o número do Whatsapp">
+         <input class="wtext" type="text" maxlength="12" name="customer_whats_no" id="customer_whats_no" placeholder="Número da Whatsapp">
         </div>
         <div class="l-box gender">
           <label>Gender:</label>
@@ -64,13 +64,13 @@ jQuery(function(jquery) {
         </div>
         <div class="l-box">
           <label>Cidade:</label>
-          <input type="text" name="customer_city" maxlength="50" id="customer_city" placeholder="Digite o nome da cidade">
+          <input type="text" name="customer_city" maxlength="50" id="customer_city" placeholder="Entre na cidade">
         </div>
         <div class="l-box sltbox">
           <label>Estado:</label>
           <div class="selectbox">
             <select name="customer_state" id="customer_state" class="text_input">
-              <option value="">Selecione o estado</option>
+              <option value="">Estado</option>
               <option value="AC">Acre</option>
               <option value="AL">Alagoas</option>
               <option value="AP">Amapá</option>
@@ -103,7 +103,7 @@ jQuery(function(jquery) {
         </div>
         <div class="l-box">
           <label>Igreja:</label>
-          <input type="text" name="customer_church" maxlength="50" id="customer_church" placeholder="Igreja Universal da Graça de Deus">
+          <input type="text" name="customer_church" maxlength="50" id="customer_church" placeholder="Entre a Igreja">
         </div>
         <div class="l-box pwdm">
           <label>Senha:</label>
