--- a/forgot_password.html
+++ b/forgot_password.html
@@ -49,7 +49,7 @@
   $('.namesub ').circleType({radius: 700});  
  </script>
 <div id="myModa6" class="modal fade" role="dialog">
-  <div class="modal-dialog terms-conditions whtsupbox"> 
+  <div class="modal-dialog terms-conditions whtsupbox frgtpwd"> 
     
     <!-- Modal content-->
     <div class="modal-content">
@@ -76,7 +76,7 @@
 
 
 <div id="myModa7" class="modal fade" role="dialog">
-  <div class="modal-dialog terms-conditions whtsupbox"> 
+  <div class="modal-dialog terms-conditions whtsupbox frgtpwd"> 
     
     <!-- Modal content-->
     <div class="modal-content">
