--- a/update_password.html
+++ b/update_password.html
@@ -77,7 +77,7 @@ function updatePassword(){
 					
 					if(data['error']['invalid_confirm'])
 				 	{
-						jQuery(".btn-enter").after('<p class="error" id="error_p">' + data['error']['invalid_confirm'] + '</p>');
+						jQuery(".btn-enter").after('<p class="error1" id="error_p">' + data['error']['invalid_confirm'] + '</p>');
 					}					
 									
 				 }
