--- a/edit-account.html
+++ b/edit-account.html
@@ -84,7 +84,7 @@ jQuery(function(jquery) {
 </script>
 </head>
 <body onLoad="getProfile();">
-<div id="o-wrapper" class="o-wrapper innerpage">
+<div id="o-wrapper" class="o-wrapper innerpage editaccountms">
   <div class="container loginpage">
     <header class="header">
       <div class="page-heading">
@@ -114,8 +114,8 @@ jQuery(function(jquery) {
         
         <div class="l-box gender">
           <label>Gender:</label>
-          <div class="rdio"><input type="radio" name="sex" id="sex_1" value="1">Male </div>
-          <div class="rdio"><input type="radio" name="sex" id="sex_2" value="2">Female</div>
+          <div class="rdio"><input type="radio" name="sex" id="sex_1" value="1">Masculino </div>
+          <div class="rdio"><input type="radio" name="sex" id="sex_2" value="2">Fêmea</div>
         </div>
         <div class="l-box">
           <label>Cidade:</label>
