--- a/register.html
+++ b/register.html
@@ -110,7 +110,7 @@ jQuery(function(jquery) {
         </div>
         <div class="l-box confm">
           <label>Confirme a Senha:</label>
-          <input type="password" name="customer_con_password" maxlength="12" id="customer_con_password" placeholder="Confirme a Senha">
+          <input type="password" name="customer_con_password" maxlength="12" id="customer_con_password" placeholder="Senha">
         </div>
         <div class="uploadfilemain">
           <div class="custom-file-upload"> <img src="images/uploadimg.png" id="image_sr_1" onclick="getImage1();"/>          
