--- a/index.html
+++ b/index.html
@@ -135,15 +135,9 @@ $(".next").click(function () {
  <!---- report flag -->
  <div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog">   
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"></button>
-        <h4 class="modal-title"></h4>
-      </div>
+    <div class="modal-content">      
       <div class="modal-body">
-        <div class="pooptitle">Selecione a Alternativa
-que Melhor define 
-a Imagem</div>
+        <div class="pooptitle">Selecione a Alternativa que Melhor define a Imagem</div>
 
 <ul class="donate-now">
 <li>
