--- a/register.html
+++ b/register.html
@@ -154,15 +154,9 @@ jQuery(function(jquery) {
 <!-- /c-menu slide-right -->
 
 <div id="c-mask" class="c-mask"></div>
-<div id="myModa2" class="modal fade" role="dialog">
-  <div class="modal-dialog terms-conditions"> 
-    
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"></button>
-        <h4 class="modal-title"></h4>
-      </div>
+<div id="myModa2" class="modal fade regsppu" role="dialog">
+  <div class="modal-dialog terms-conditions">  
+    <div class="modal-content">      
       <div class="modal-body loginpage">
         <header class="header">
           <div class="page-heading">
