--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@ jQuery(function(jquery) {
 </head>
 <body>
 <div id="o-wrapper" class="o-wrapper innerpage">
-  <div class="container loginpage">
+  <div class="container loginpage regt">
     <header class="header" id="header">
       <div class="page-heading">
         <div class="head-line"><span>Criar Perfil</span></div>
