--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@ function rateUser(rate_point){
     <li class="c-menu__item"><a href="edit-profile.html" class="c-menu__link">My Profile</a></li>
     <li class="c-menu__item"><a href="update_password.html" class="c-menu__link">Change Password</a></li>
     <li class="c-menu__item"><a href="favourite.html" class="c-menu__link">My Favourites</a></li>
+    <li class="c-menu__item"><a href="ranking.html" class="c-menu__link">Rankings</a></li>
     <li class="c-menu__item"><a href="javascript:void(0);" onClick="logOut();" class="c-menu__link">Log Out</a></li>
   </ul>
 </nav>
