--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-<script type="text/javascript">  
+<script type="text/javascript">
+StatusBar.hide();  
 if (localStorage.getItem("customer_log_id") === null) {
   window.location = './login.html';
 }else if(parseInt(localStorage.getItem("customer_log_id")) > 0)
