--- a/edit-account.html
+++ b/edit-account.html
@@ -113,9 +113,9 @@ jQuery(function(jquery) {
         
         
         <div class="l-box gender">
-          <label>Gender:</label>
+          <label>Sexo:</label>
           <div class="rdio"><input type="radio" name="sex" id="sex_1" value="1">Masculino </div>
-          <div class="rdio"><input type="radio" name="sex" id="sex_2" value="2">Fêmea</div>
+          <div class="rdio"><input type="radio" name="sex" id="sex_2" value="2">Feminino</div>
         </div>
         <div class="l-box">
           <label>Cidade:</label>
