--- a/register.html
+++ b/register.html
@@ -53,13 +53,13 @@ jQuery(function(jquery) {
          <input class="wtext" type="text" maxlength="12" name="customer_whats_no" id="customer_whats_no" placeholder="Número da Whatsapp">
         </div>
         <div class="l-box gender">
-          <label>Gender:</label>
+          <label>Sexo:</label>
           <div class="rdio">
             <input type="radio" name="customer_sex" checked value="1">
             Masculino </div>
           <div class="rdio">
             <input type="radio" name="customer_sex" value="2">
-            Fêmea</div>
+            Feminino</div>
         </div>
         <div class="l-box">
           <label>Cidade:</label>
