--- a/favourite.html
+++ b/favourite.html
@@ -136,9 +136,9 @@ function noAction(){
 function showConfirm(user_id) {
         navigator.notification.confirm(
             'Tem Certeza Que Deseja Excluir?',  
-            onConfirm,              
+            removeFav,              
             'Confirmações',            
-            'OK,Cancel'          
+            'Submit, Cancel'          
         );
     }
 
