--- a/favourite.html
+++ b/favourite.html
@@ -146,7 +146,7 @@ function removeFav(user_id)
 {
 	alert(user_id);
 	
-	var url = siteurl + '?route=common/home/removeFav';	
+	/*var url = siteurl + '?route=common/home/removeFav';	
 	
 	
 	jQuery.ajax({
@@ -191,7 +191,7 @@ function removeFav(user_id)
 				
 				$(".fav-prof").html(fav_lists);	 
 			}
-   		});
+   		});*/
 }	
 </script>
 </body>
