--- a/favourite.html
+++ b/favourite.html
@@ -137,7 +137,7 @@ function showConfirm(user_id) {
 
 function removeFav()
 {
-	var user_id = $("#user_id").val(user_id);
+	var user_id = $("#user_id").val();
 	alert(user_id);
 	
 	/*var url = siteurl + '?route=common/home/removeFav';	
