--- a/favourite.html
+++ b/favourite.html
@@ -131,15 +131,14 @@ function showConfirm(user_id) {
             'Tem Certeza Que Deseja Excluir?',  
             removeFav,              
             'Confirmações',            
-            'Cancel, OK'          
+            'Ok, Cancel'          
         );
     }
 
 function removeFav(button_press)
-{
-	alert(button_press);
+{	
 	
-   /*if(button_press == 2)
+   if(button_press == 1)
    {
 	var user_id = $("#user_id").val();
 		
@@ -189,7 +188,7 @@ function removeFav(button_press)
 			}
    		});
 		
-	}*/
+	}
 }	
 </script>
 </body>
