--- a/favourite.html
+++ b/favourite.html
@@ -131,7 +131,7 @@ function showConfirm(user_id) {
             'Tem Certeza Que Deseja Excluir?',  
             removeFav,              
             'Confirmações',            
-            'Ok, Cancel'          
+            'Está bem, Cancelar'          
         );
     }
 
