--- a/view_profile.html
+++ b/view_profile.html
@@ -157,7 +157,7 @@ if(localStorage.getItem("customer_log_id") === null){
 <nav id="c-menu--slide-right" class="c-menu c-menu--slide-right">
   <button class="c-menu__close">Fechar Menu &rarr;</button>
   <ul class="c-menu__items">
-    <li class="c-menu__item"><a href="index.html" class="c-menu__link">Home</a></li>
+    <li class="c-menu__item"><a href="index.html" class="c-menu__link">início</a></li>
     <li class="c-menu__item"><a href="edit-profile.html" class="c-menu__link">Meu perfil</a></li>
     <li class="c-menu__item"><a href="update_password.html" class="c-menu__link">Mudar Senha</a></li>
     <li class="c-menu__item"><a href="favourite.html" class="c-menu__link">Meus favoritos</a></li>
