--- a/edit-profile.html
+++ b/edit-profile.html
@@ -14,13 +14,13 @@
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/config.js"></script>
 <script src="js/menu.js" type="text/javascript"></script>
-<script src="js/owl.carousel.js" type="text/javascript"></script> 
-<script src="js/plugins.js" type="text/javascript"></script> 
+<script src="js/owl.carousel.js" type="text/javascript"></script>
+<script src="js/plugins.js" type="text/javascript"></script>
 <script src="js/circletype.js" type="text/javascript"></script>
-<script type="text/javascript">  
+<script type="text/javascript">
 if(localStorage.getItem("customer_log_id") === null){
   window.location = './login.html';
-}  
+}
 </script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,8 +30,7 @@ if(localStorage.getItem("customer_log_id") === null){
     <![endif]-->
 
 <script type="text/javascript">
-function getProfile(){
-	
+function getProfile(){	
 	var url = siteurl + '?route=account/login/getprofile';
 	jQuery.ajax({
 			 type: 'POST',
@@ -99,9 +98,9 @@ function getProfile(){
 					$('.namesub ').circleType({radius: 700});
 				 }
 			}
-   		});	
+   		});
 	}
-</script>  
+</script>
 </head>
 <body onLoad="getProfile();">
 <div id="o-wrapper" class="o-wrapper">
@@ -117,11 +116,11 @@ function getProfile(){
                 <div class="pro-rankingnm">Editar Perfil</div>
 				<div class="edi-fav" id="total_fav"></div>
                 <div class="clearfix"></div>
-                <div class="pro-rankingnum" id="ranking_position"></div>			
+                <div class="pro-rankingnum" id="ranking_position"></div>
             </div>
             <div class="slider-content">
                 <div class="slider-wrap"></div>
-                <div class="owl-carousel owl-theme">                   
+                <div class="owl-carousel owl-theme">
                 </div>
 				<!--<div class="edit-up"><a href="edit-account.html"><img src="images/edit-imgicon.png"/></a></div>-->
                 <div class="customNavigation"> <a class="prev"> <img src="images/prevbtn.png" alt=""></a> <a class="next"><img src="images/nextbtn.png" alt=""></a> </div>
@@ -142,7 +141,7 @@ function getProfile(){
             <div class="starthree"><span>30</span></div>
         </div>
         <div class="starbtmtext">Quantas Estrelas Ele(a) Merece?</div>
-    </div>    
+    </div>
 </div>
 <nav id="c-menu--slide-right" class="c-menu c-menu--slide-right">
     <button class="c-menu__close">Close Menu &rarr;</button>
@@ -152,6 +151,7 @@ function getProfile(){
         <li class="c-menu__item"><a href="update_password.html" class="c-menu__link">Mudar Senha</a></li>
         <li class="c-menu__item"><a href="favourite.html" class="c-menu__link">Meus favoritos</a></li>
         <li class="c-menu__item"><a href="ranking.html" class="c-menu__link">Confira O Ranking</a></li>
+        <li class="c-menu__item"><a href="whatsapp.html" class="c-menu__link">Convites de WhatsApp</a></li>
         <li class="c-menu__item"><a href="javascript:void(0);" onClick="logOut();" class="c-menu__link">Sair</a></li>
     </ul>
 </nav>
@@ -159,21 +159,17 @@ function getProfile(){
 <div id="c-mask" class="c-mask"></div>
 <script type="text/javascript">
 	total_fav = 0;
-
 	if(localStorage.getItem("total_fav") != null){
 		total_fav = localStorage.getItem("total_fav");
 	}
 
 	$("#total_fav").html(total_fav);
-	
 	ranking_position = '0º';
-
 	if(localStorage.getItem("ranking_position") != null){
 		ranking_position = localStorage.getItem("ranking_position");
 	}
 	
   $("#ranking_position").html(ranking_position);
-
   var slideRight = new Menu({
     wrapper: '#o-wrapper',
     type: 'slide-right',
@@ -182,8 +178,7 @@ function getProfile(){
   });
  
   var slideRightBtn = document.querySelector('#c-button--slide-right');
-  
-  slideRightBtn.addEventListener('click', function(e) {
+  slideRightBtn.addEventListener('click', function(e){
     e.preventDefault;
     slideRight.open();
   });
@@ -191,17 +186,14 @@ function getProfile(){
 function logOut(){
 	localStorage.removeItem("customer_log_id");
 	localStorage.removeItem("customer_sex");
-	window.location = 'login.html';	
+	window.location = 'login.html';
 }
 </script>
-
-     
-     
 <script type="text/javascript">
 $(window).load(function(){
  $('.starbtmtext').circleType({radius: -700});
  $('.namewraper span').circleType({radius: 700});
-  $('.namesub ').circleType({radius: 700});  
+  $('.namesub ').circleType({radius: 700});
 });
  </script>   
 </body>
