--- a/whatsapp.html
+++ b/whatsapp.html
@@ -136,6 +136,10 @@ function reject(invitation_id)
 			}
    		});
 }
+
+function callBackFunctionFlag(){
+	return true;
+}
 </script>
 </body>
 </html>
