--- a/ranking.html
+++ b/ranking.html
@@ -58,7 +58,7 @@ function getRanking(){
 				 
 				 	$("#top_3").html(top_3_users);
 					
-					$('.volterbox button span').circleType({radius: -600});
+					//$('.volterbox button span').circleType({radius: -600});
 			  }
 			}
    		});
@@ -87,8 +87,7 @@ function getRanking(){
 </div>
 <script type="text/javascript">
  $('.head-line span').circleType({radius: 600});
- $('.volterbox button span').circleType({radius: -600});
- $('.namesub ').circleType({radius: 700});
+  $('.namesub ').circleType({radius: 700});
  </script>
 </body>
 </html>
