--- a/edit-account.html
+++ b/edit-account.html
@@ -197,7 +197,9 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50, 
+			quality: 50,
+			correctOrientation: true,
+			sourceType: source, 
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -270,6 +272,8 @@ jQuery(function(jquery) {
 					);
 		},{
 			quality: 50, 
+			correctOrientation: true,
+			sourceType: source,
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -340,7 +344,9 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50, 
+			quality: 50,
+			correctOrientation: true,
+			sourceType: source, 
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
