--- a/edit-account.html
+++ b/edit-account.html
@@ -197,8 +197,9 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50,
-			correctOrientation: true,			
+			quality: 100,
+			correctOrientation: true,
+			targetWidth: 600,			
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -270,8 +271,9 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50, 
-			correctOrientation: true,			
+			quality: 100, 
+			correctOrientation: true,
+			targetWidth: 600,			
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -342,8 +344,9 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50,
-			correctOrientation: true,			
+			quality: 100,
+			correctOrientation: true,
+			targetWidth: 600,			
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
