--- a/register.html
+++ b/register.html
@@ -187,8 +187,9 @@ jQuery(function(jquery) {
 			
 			
 		},{
-			quality: 50, 
-			correctOrientation: true,			
+			quality: 100, 
+			correctOrientation: true,
+			targetWidth: 600,			
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -256,8 +257,9 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50,
-			correctOrientation: true,			
+			quality: 100,
+			correctOrientation: true,
+			targetWidth: 600,			
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -327,8 +329,9 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50,
-			correctOrientation: true,			
+			quality: 100,
+			correctOrientation: true,
+			targetWidth: 600,			
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
