--- a/register.html
+++ b/register.html
@@ -203,7 +203,7 @@ jQuery(function(jquery) {
             var options1 = new FileUploadOptions();
             options1.fileKey="file";
             options1.fileName=imageURI1.substr(imageURI1.lastIndexOf('/')+1);
-            options1.mimeType="text/plain";
+            options1.mimeType="image/jpeg";
  
             var params1 = new Object();
             params1.value1 = "test";
@@ -273,7 +273,7 @@ jQuery(function(jquery) {
             var options2 = new FileUploadOptions();
             options2.fileKey="file";
             options2.fileName=imageURI2.substr(imageURI2.lastIndexOf('/')+1);
-            options2.mimeType="text/plain";
+            options2.mimeType="image/jpeg";
  
             var params2 = new Object();
             params2.value1 = "test";
@@ -345,7 +345,7 @@ jQuery(function(jquery) {
             var options3 = new FileUploadOptions();
             options3.fileKey="file";
             options3.fileName=imageURI3.substr(imageURI3.lastIndexOf('/')+1);
-            options3.mimeType="text/plain";
+            options3.mimeType="image/jpeg";
  
             var params3 = new Object();
             params3.value1 = "test";
