--- a/whatsapp.html
+++ b/whatsapp.html
@@ -56,7 +56,7 @@ function myInvitation(){
 					 }				 
 				 }else if(data['no_results'])
 				 {
-					invite_lists = '<li class="align_centre">You have no invitations.</li>'; 
+					invite_lists = '<li class="align_centre">Você não tem convites.</li>'; 
 				}
 				 
 				 
